Scrollbar fixes. Load every panel with ng-if.

--- a/client/style.css
+++ b/client/style.css
@@ -55,7 +55,7 @@
     float: left;
     font-size: 12px;
     min-height: 1px;
-    /*border-top: 1px solid black;*/
+    border-top: 1px solid black;
 }
 
 .view-column {
